--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-mentions": "^4.4.10",
     "react-router-dom": "^7.1.5",
     "supabase": "^2.9.6",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "textarea-caret-position": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
